**************
RECENT CHANGES
**************

======
1.88.0
======

* #149 Command for dumping media directory
* #310 Export inline translation to CSV (by Alexander Menk)
* #316 db:import dump optimization (--optimize) - small fixes (by Alexander Menk)
* #319 dev:module:rewrite:list does not list autoload rewrites in community folder

======
1.87.0
======

* #268 script:repo Handling of *.magerun files
* #294, #300, #301 New bash completion script (by Allard Hoeve)
* #302 Added task to compile n98-magerun for HHVM -> phing build script
* #304 EAV Attribute Commands
* #305 Fixed typo in uninstall command description. (by Matthias Zeis)
* #307 Fix typo in db:dump help text (by Colin O'Dell)
* Updated 3rd party dependencies

======
1.86.0
======

* New db:maintain:check-tables command
* #287 db:console closes connection on AWS
* #288 Install command with --noDownload options fails if database exists
* #290 Add force use database option for when installing with --noDownload (by Aydin Hassan)
* #295 Fixed typo in config.yaml  (by Andrea De Pirro)
* #296 loadXML must be called AFTER preserveWhiteSpace (by Volker Thiel)
* #297 [Insight] Missing use statement should be avoided

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net