@@ -1,16 +1,16 @@
 <?php
 
-namespace N98\Magento\Command\Developer;
+namespace N98\Magento\Command\Developer\Translate;
 
 use Symfony\Component\Console\Tester\CommandTester;
 use N98\Magento\Command\PHPUnit\TestCase;
 
-class TranslateInlineShopCommandTest extends TestCase
+class InlineShopCommandTest extends TestCase
 {
     public function testExecute()
     {
         $application = $this->getApplication();
-        $application->add(new TranslateInlineAdminCommand());
+        $application->add(new InlineAdminCommand());
         $application->setAutoExit(false);
         $command = $this->getApplication()->find('dev:translate:shop');
 
